APIs/googleapis.com/jobs/v3/java-client/README.md
# openapi-java-client

Cloud Talent Solution API
- API version: v3
  - Build date: 2024-10-12T11:35:22.826388-04:00[America/New_York]
  - Generator version: 7.9.0

Cloud Talent Solution provides the capability to create, read, update, and delete job postings, as well as search jobs based on keywords and filters. 

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v3</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v3"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v3.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.ProjectsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://jobs.googleapis.com");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    ProjectsApi apiInstance = new ProjectsApi(defaultClient);
    String parent = "parent_example"; // String | Parent project name.
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    CreateClientEventRequest createClientEventRequest = new CreateClientEventRequest(); // CreateClientEventRequest | 
    try {
      ClientEvent result = apiInstance.jobsProjectsClientEventsCreate(parent, $xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType, createClientEventRequest);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling ProjectsApi#jobsProjectsClientEventsCreate");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://jobs.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ProjectsApi* | [**jobsProjectsClientEventsCreate**](docs/ProjectsApi.md#jobsProjectsClientEventsCreate) | **POST** /v3/{parent}/clientEvents | 
*ProjectsApi* | [**jobsProjectsCompaniesCreate**](docs/ProjectsApi.md#jobsProjectsCompaniesCreate) | **POST** /v3/{parent}/companies | 
*ProjectsApi* | [**jobsProjectsCompaniesList**](docs/ProjectsApi.md#jobsProjectsCompaniesList) | **GET** /v3/{parent}/companies | 
*ProjectsApi* | [**jobsProjectsComplete**](docs/ProjectsApi.md#jobsProjectsComplete) | **GET** /v3/{name}:complete | 
*ProjectsApi* | [**jobsProjectsJobsBatchDelete**](docs/ProjectsApi.md#jobsProjectsJobsBatchDelete) | **POST** /v3/{parent}/jobs:batchDelete | 
*ProjectsApi* | [**jobsProjectsJobsCreate**](docs/ProjectsApi.md#jobsProjectsJobsCreate) | **POST** /v3/{parent}/jobs | 
*ProjectsApi* | [**jobsProjectsJobsDelete**](docs/ProjectsApi.md#jobsProjectsJobsDelete) | **DELETE** /v3/{name} | 
*ProjectsApi* | [**jobsProjectsJobsGet**](docs/ProjectsApi.md#jobsProjectsJobsGet) | **GET** /v3/{name} | 
*ProjectsApi* | [**jobsProjectsJobsList**](docs/ProjectsApi.md#jobsProjectsJobsList) | **GET** /v3/{parent}/jobs | 
*ProjectsApi* | [**jobsProjectsJobsPatch**](docs/ProjectsApi.md#jobsProjectsJobsPatch) | **PATCH** /v3/{name} | 
*ProjectsApi* | [**jobsProjectsJobsSearch**](docs/ProjectsApi.md#jobsProjectsJobsSearch) | **POST** /v3/{parent}/jobs:search | 
*ProjectsApi* | [**jobsProjectsJobsSearchForAlert**](docs/ProjectsApi.md#jobsProjectsJobsSearchForAlert) | **POST** /v3/{parent}/jobs:searchForAlert | 


## Documentation for Models

 - [ApplicationInfo](docs/ApplicationInfo.md)
 - [BatchDeleteJobsRequest](docs/BatchDeleteJobsRequest.md)
 - [BucketRange](docs/BucketRange.md)
 - [BucketizedCount](docs/BucketizedCount.md)
 - [ClientEvent](docs/ClientEvent.md)
 - [CommuteFilter](docs/CommuteFilter.md)
 - [CommuteInfo](docs/CommuteInfo.md)
 - [Company](docs/Company.md)
 - [CompanyDerivedInfo](docs/CompanyDerivedInfo.md)
 - [CompensationEntry](docs/CompensationEntry.md)
 - [CompensationFilter](docs/CompensationFilter.md)
 - [CompensationHistogramRequest](docs/CompensationHistogramRequest.md)
 - [CompensationHistogramResult](docs/CompensationHistogramResult.md)
 - [CompensationInfo](docs/CompensationInfo.md)
 - [CompensationRange](docs/CompensationRange.md)
 - [CompleteQueryResponse](docs/CompleteQueryResponse.md)
 - [CompletionResult](docs/CompletionResult.md)
 - [CreateClientEventRequest](docs/CreateClientEventRequest.md)
 - [CreateCompanyRequest](docs/CreateCompanyRequest.md)
 - [CreateJobRequest](docs/CreateJobRequest.md)
 - [CustomAttribute](docs/CustomAttribute.md)
 - [CustomAttributeHistogramRequest](docs/CustomAttributeHistogramRequest.md)
 - [CustomAttributeHistogramResult](docs/CustomAttributeHistogramResult.md)
 - [DeviceInfo](docs/DeviceInfo.md)
 - [HistogramFacets](docs/HistogramFacets.md)
 - [HistogramResult](docs/HistogramResult.md)
 - [HistogramResults](docs/HistogramResults.md)
 - [Job](docs/Job.md)
 - [JobDerivedInfo](docs/JobDerivedInfo.md)
 - [JobEvent](docs/JobEvent.md)
 - [JobQuery](docs/JobQuery.md)
 - [LatLng](docs/LatLng.md)
 - [ListCompaniesResponse](docs/ListCompaniesResponse.md)
 - [ListJobsResponse](docs/ListJobsResponse.md)
 - [Location](docs/Location.md)
 - [LocationFilter](docs/LocationFilter.md)
 - [MatchingJob](docs/MatchingJob.md)
 - [MendelDebugInput](docs/MendelDebugInput.md)
 - [Money](docs/Money.md)
 - [NamespacedDebugInput](docs/NamespacedDebugInput.md)
 - [NumericBucketingOption](docs/NumericBucketingOption.md)
 - [NumericBucketingResult](docs/NumericBucketingResult.md)
 - [PostalAddress](docs/PostalAddress.md)
 - [ProcessingOptions](docs/ProcessingOptions.md)
 - [RequestMetadata](docs/RequestMetadata.md)
 - [ResponseMetadata](docs/ResponseMetadata.md)
 - [SearchJobsRequest](docs/SearchJobsRequest.md)
 - [SearchJobsResponse](docs/SearchJobsResponse.md)
 - [SpellingCorrection](docs/SpellingCorrection.md)
 - [TimeOfDay](docs/TimeOfDay.md)
 - [TimestampRange](docs/TimestampRange.md)
 - [UpdateCompanyRequest](docs/UpdateCompanyRequest.md)
 - [UpdateJobRequest](docs/UpdateJobRequest.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/jobs: Manage job postings

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/jobs: Manage job postings


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



