APIs/googleapis.com/jobs/v4/java-client/README.md
# openapi-java-client

Cloud Talent Solution API
- API version: v4
  - Build date: 2024-10-12T11:35:21.539627-04:00[America/New_York]
  - Generator version: 7.9.0

Cloud Talent Solution provides the capability to create, read, update, and delete job postings, as well as search jobs based on keywords and filters. 

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v4</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v4"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v4.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.ProjectsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://jobs.googleapis.com");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    ProjectsApi apiInstance = new ProjectsApi(defaultClient);
    String parent = "parent_example"; // String | Required. Resource name of the tenant under which the event is created. The format is \"projects/{project_id}/tenants/{tenant_id}\", for example, \"projects/foo/tenants/bar\".
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    ClientEvent clientEvent = new ClientEvent(); // ClientEvent | 
    try {
      ClientEvent result = apiInstance.jobsProjectsTenantsClientEventsCreate(parent, $xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType, clientEvent);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling ProjectsApi#jobsProjectsTenantsClientEventsCreate");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://jobs.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ProjectsApi* | [**jobsProjectsTenantsClientEventsCreate**](docs/ProjectsApi.md#jobsProjectsTenantsClientEventsCreate) | **POST** /v4/{parent}/clientEvents | 
*ProjectsApi* | [**jobsProjectsTenantsCompaniesCreate**](docs/ProjectsApi.md#jobsProjectsTenantsCompaniesCreate) | **POST** /v4/{parent}/companies | 
*ProjectsApi* | [**jobsProjectsTenantsCompaniesList**](docs/ProjectsApi.md#jobsProjectsTenantsCompaniesList) | **GET** /v4/{parent}/companies | 
*ProjectsApi* | [**jobsProjectsTenantsCompleteQuery**](docs/ProjectsApi.md#jobsProjectsTenantsCompleteQuery) | **GET** /v4/{tenant}:completeQuery | 
*ProjectsApi* | [**jobsProjectsTenantsCreate**](docs/ProjectsApi.md#jobsProjectsTenantsCreate) | **POST** /v4/{parent}/tenants | 
*ProjectsApi* | [**jobsProjectsTenantsJobsBatchCreate**](docs/ProjectsApi.md#jobsProjectsTenantsJobsBatchCreate) | **POST** /v4/{parent}/jobs:batchCreate | 
*ProjectsApi* | [**jobsProjectsTenantsJobsBatchDelete**](docs/ProjectsApi.md#jobsProjectsTenantsJobsBatchDelete) | **POST** /v4/{parent}/jobs:batchDelete | 
*ProjectsApi* | [**jobsProjectsTenantsJobsBatchUpdate**](docs/ProjectsApi.md#jobsProjectsTenantsJobsBatchUpdate) | **POST** /v4/{parent}/jobs:batchUpdate | 
*ProjectsApi* | [**jobsProjectsTenantsJobsCreate**](docs/ProjectsApi.md#jobsProjectsTenantsJobsCreate) | **POST** /v4/{parent}/jobs | 
*ProjectsApi* | [**jobsProjectsTenantsJobsDelete**](docs/ProjectsApi.md#jobsProjectsTenantsJobsDelete) | **DELETE** /v4/{name} | 
*ProjectsApi* | [**jobsProjectsTenantsJobsGet**](docs/ProjectsApi.md#jobsProjectsTenantsJobsGet) | **GET** /v4/{name} | 
*ProjectsApi* | [**jobsProjectsTenantsJobsList**](docs/ProjectsApi.md#jobsProjectsTenantsJobsList) | **GET** /v4/{parent}/jobs | 
*ProjectsApi* | [**jobsProjectsTenantsJobsPatch**](docs/ProjectsApi.md#jobsProjectsTenantsJobsPatch) | **PATCH** /v4/{name} | 
*ProjectsApi* | [**jobsProjectsTenantsJobsSearch**](docs/ProjectsApi.md#jobsProjectsTenantsJobsSearch) | **POST** /v4/{parent}/jobs:search | 
*ProjectsApi* | [**jobsProjectsTenantsJobsSearchForAlert**](docs/ProjectsApi.md#jobsProjectsTenantsJobsSearchForAlert) | **POST** /v4/{parent}/jobs:searchForAlert | 
*ProjectsApi* | [**jobsProjectsTenantsList**](docs/ProjectsApi.md#jobsProjectsTenantsList) | **GET** /v4/{parent}/tenants | 


## Documentation for Models

 - [ApplicationInfo](docs/ApplicationInfo.md)
 - [BatchCreateJobsRequest](docs/BatchCreateJobsRequest.md)
 - [BatchCreateJobsResponse](docs/BatchCreateJobsResponse.md)
 - [BatchDeleteJobsRequest](docs/BatchDeleteJobsRequest.md)
 - [BatchDeleteJobsResponse](docs/BatchDeleteJobsResponse.md)
 - [BatchOperationMetadata](docs/BatchOperationMetadata.md)
 - [BatchUpdateJobsRequest](docs/BatchUpdateJobsRequest.md)
 - [BatchUpdateJobsResponse](docs/BatchUpdateJobsResponse.md)
 - [ClientEvent](docs/ClientEvent.md)
 - [CommuteFilter](docs/CommuteFilter.md)
 - [CommuteInfo](docs/CommuteInfo.md)
 - [Company](docs/Company.md)
 - [CompanyDerivedInfo](docs/CompanyDerivedInfo.md)
 - [CompensationEntry](docs/CompensationEntry.md)
 - [CompensationFilter](docs/CompensationFilter.md)
 - [CompensationInfo](docs/CompensationInfo.md)
 - [CompensationRange](docs/CompensationRange.md)
 - [CompleteQueryResponse](docs/CompleteQueryResponse.md)
 - [CompletionResult](docs/CompletionResult.md)
 - [CustomAttribute](docs/CustomAttribute.md)
 - [CustomRankingInfo](docs/CustomRankingInfo.md)
 - [DeviceInfo](docs/DeviceInfo.md)
 - [HistogramQuery](docs/HistogramQuery.md)
 - [HistogramQueryResult](docs/HistogramQueryResult.md)
 - [Job](docs/Job.md)
 - [JobDerivedInfo](docs/JobDerivedInfo.md)
 - [JobEvent](docs/JobEvent.md)
 - [JobQuery](docs/JobQuery.md)
 - [JobResult](docs/JobResult.md)
 - [LatLng](docs/LatLng.md)
 - [ListCompaniesResponse](docs/ListCompaniesResponse.md)
 - [ListJobsResponse](docs/ListJobsResponse.md)
 - [ListTenantsResponse](docs/ListTenantsResponse.md)
 - [Location](docs/Location.md)
 - [LocationFilter](docs/LocationFilter.md)
 - [MatchingJob](docs/MatchingJob.md)
 - [MendelDebugInput](docs/MendelDebugInput.md)
 - [Money](docs/Money.md)
 - [NamespacedDebugInput](docs/NamespacedDebugInput.md)
 - [Operation](docs/Operation.md)
 - [PostalAddress](docs/PostalAddress.md)
 - [ProcessingOptions](docs/ProcessingOptions.md)
 - [RequestMetadata](docs/RequestMetadata.md)
 - [ResponseMetadata](docs/ResponseMetadata.md)
 - [SearchJobsRequest](docs/SearchJobsRequest.md)
 - [SearchJobsResponse](docs/SearchJobsResponse.md)
 - [SpellingCorrection](docs/SpellingCorrection.md)
 - [Status](docs/Status.md)
 - [Tenant](docs/Tenant.md)
 - [TimeOfDay](docs/TimeOfDay.md)
 - [TimestampRange](docs/TimestampRange.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/jobs: Manage job postings

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/jobs: Manage job postings


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



